Add LaTeX template for thesis report and related configurations
- Created markLampiran.tex for appendix section formatting.
- Added sampul.tex for cover page design.
- Introduced uithesis.sty for UI thesis formatting rules.
- Developed laporan-kp.tex as the main document template for thesis.
- Updated pustaka.bib with new references for thesis templates.
- Modified pengantar.tex to include a note about copying content.
- Corrected references in ab2.tex, ab4.tex, and ab5.tex to reflect the new document structure.
- Changed bibliography style in 	hesis.tex to IEEE format.

--- a/laporan-kp.tex
+++ b/laporan-kp.tex
@@ -114,7 +114,7 @@
 %\input{pustaka}
 
 % Alternatif manajemen daftar pustaka dengan \bibliography
-\bibliographystyle{ieeetr}
+\bibliographystyle{apalike}
 \bibliography{pustaka}
 
 %
