--- a/pustaka.bib
+++ b/pustaka.bib
@@ -1,5 +1,5 @@
 # Alternatif manajemen daftar pustaka dengan \bibliography
-# Keuntungannya adalah sitasi dapat langsung disalin dari web (contoh: scholar.google.com) dan format tampilan dapat diubah secara otomatis hanya dengan mengganti konfigurasi \bibliographystyle di thesis.tex https://www.sharelatex.com/learn/Bibtex_bibliography_styles
+# Keuntungannya adalah sitasi dapat langsung disalin dari web (contoh: scholar.google.com) dan format tampilan dapat diubah secara otomatis hanya dengan mengganti konfigurasi \bibliographystyle di laporan-kp.tex https://www.sharelatex.com/learn/Bibtex_bibliography_styles
 
 @article{lankton2008introduction,
   title={Introduction to LATEX},
@@ -27,4 +27,20 @@
   pages={81--138},
   year={1995},
   publisher={Elsevier}
+}
+
+@misc{edgrant2025kptemplate,
+  title={Laporan Kerja Praktek DTE FTUI Template},
+  author={Suryajaya, Edgrant Henderson},
+  year={2025},
+  howpublished={\url{https://github.com/EdgrantHS/Laporan-KP-TEEP}},
+  note={Accessed: 2025-08-01}
+}
+
+@misc{febrian2017uitemplate,
+  title={Thesis Template for Universitas Indonesia},
+  author={Febrian, Andreas and others},
+  year={2017},
+  howpublished={\url{https://www.overleaf.com/latex/templates/thesis-template-for-universitas-indonesia/brfkhqvmkzhv}},
+  note={Accessed: 2025-08-01}
 }
