--- a/src/00-front_matter/04-pengantar.tex
+++ b/src/00-front_matter/04-pengantar.tex
@@ -2,6 +2,10 @@
 \chapter*{Kata Pengantar}
 %-----------------------------------------------------------------------------%
 
+\begin{center}
+        \large \textbf{Jangan kopas kata pengantar ini, ini bekas kopasan Kak Joshevan}
+\end{center}
+
 Puji syukur saya panjatkan kepada Tuhan YME atas berkat, rahmat, dan
 nikmat-Nya, sehingga penulis dapat melaksanakan kegiatan Kerja Praktik ini dari
 awal proses seleksi masuk program ini melalui serangkaian proses seleksi hingga
