--- a/src/01-body/02-bab2.tex
+++ b/src/01-body/02-bab2.tex
@@ -96,7 +96,7 @@ Donec tincidunt nisl non elit posuere pretium. Pellentesque quis sagittis velit,
 % Texlive dapat didownload dari \url{http://www.tug.org/texlive/}. 
 % Sedangkan Texmaker dapat didownload dari 
 % \url{http://www.xm1math.net/texmaker/}. 
-% Untuk pertama kali, coba buka berkas thesis.tex dalam template yang Anda miliki 
+% Untuk pertama kali, coba buka berkas laporan-kp.tex dalam template yang Anda miliki 
 % pada Texmaker. 
 % Dokumen ini adalah dokumen utama. 
 % Tekan F6 (PDFLaTeX) dan Texmaker akan mengkompilasi berkas tersebut menjadi 
