--- a/src/01-body/04-bab4.tex
+++ b/src/01-body/04-bab4.tex
@@ -50,7 +50,8 @@ Untuk mempelajari bibtex lebih lanjut, silahkan buka
 \url{http://www.bibtex.org/Format}. 
 Untuk merujuk pada salah satu referensi yang ada, gunakan perintah \bslash 
 cite, e.g. \bslash cite\{lankton2008introduction\} yang akan akan memunculkan 
-\cite{lankton2008introduction}
+\cite{edgrant2025kptemplate}
+\cite{febrian2017uitemplate}
 
 
 %-----------------------------------------------------------------------------%
