--- a/src/01-body/05-bab5.tex
+++ b/src/01-body/05-bab5.tex
@@ -41,7 +41,7 @@ kerjakan, yaitu:
 %-----------------------------------------------------------------------------%
 Terkadang ada kebutuhan untuk memasukan kata-kata tertentu kedalam Daftar Isi. 
 Perintah \bslash addChapter dapat digunakan untuk judul bab dalam Daftar isi. 
-Contohnya dapat dilihat pada berkas thesis.tex.
+Contohnya dapat dilihat pada berkas laporan-kp.tex.
 
 
 %-----------------------------------------------------------------------------%
