Update bibliography management to use biblatex with IEEE style

--- a/_internals/uithesis.sty
+++ b/_internals/uithesis.sty
@@ -140,7 +140,11 @@
   \floatplacement{table}{H}
 
 % Bibliography
-\usepackage{natbib}
+\usepackage[style=ieee]{biblatex}
+\DefineBibliographyStrings{english}{
+  urlseen = {accessed on},
+}
+\addbibresource{pustaka.bib}
 
 % Slanted fraction symbol
 \usepackage{nicefrac}
