--- a/laporan-kp.tex
+++ b/laporan-kp.tex
@@ -114,8 +114,9 @@
 %\input{pustaka}
 
 % Alternatif manajemen daftar pustaka dengan \bibliography
-\bibliographystyle{apalike}
-\bibliography{pustaka}
+% \bibliographystyle{apalike}
+% \bibliography{pustaka}
+\printbibliography[heading=bibintoc, title={Daftar Pustaka}]
 
 %
 % Lampiran 
