--- a/src/00-front_matter/04-pengantar.tex
+++ b/src/00-front_matter/04-pengantar.tex
@@ -2,29 +2,17 @@
 \chapter*{Kata Pengantar}
 %-----------------------------------------------------------------------------%
 
-\begin{center}
-        \large \textbf{Jangan kopas kata pengantar ini, ini bekas kopasan Kak Joshevan}
-\end{center}
-
-Puji syukur saya panjatkan kepada Tuhan YME atas berkat, rahmat, dan
-nikmat-Nya, sehingga penulis dapat melaksanakan kegiatan Kerja Praktik ini dari
-awal proses seleksi masuk program ini melalui serangkaian proses seleksi hingga
-pada saat ini dapat menyelesaikan Laporan Akhir yang berjudul “\judul”. Kegiatan ini dilakukan selama
+Puji syukur saya panjatkan kepada Tuhan YME atas \ldots menyelesaikan Laporan Akhir yang berjudul “\judul”. Kegiatan ini dilakukan selama
 kurang lebih 2 bulan dari \startMagang \ hingga \akhirMagang. Laporan ini ditulis
 untuk memenuhi salah satu syarat untuk menyelesaikan Kerja Praktik dan juga
 syarat kelulusan Fakultas Teknik Universitas Indonesia.
 
-Selama menjalani proses kegiatan dan menyelesaikan laporan ini, penulis
-tentunya tidak dapat melaksanakannya tanpa adanya bantuan dan dukungan dari
-pihak lain. Pada kesempatan ini, penulis ingin mengucapkan terima kasih sebesar-
-besarnya kepada pihak-pihak terkait, yang terkait yaitu sebagai berikut:
+Selama menjalani proses \ldots dukungan dari
+pihak lain \ldots terima kasih \ldots yaitu sebagai berikut:
 
 \begin{enumerate}
-	\item Tuhan YME yang telah memberikan kesehatan kepada penulis sehingga
-        penulis dapat menjalani program Studi Independen sampai akhir
-        sekaligus berkat, rahmat, dan nikmat-Nya sehingga penulis dapat
-        menyelesaikan laporan akhir dengan tepat waktu.
-	\item Bapak Dr. Ruki Harwahyu S.T., M.T., M.Sc., selaku koordinator
+	\item Tuhan YME yang telah \ldots	
+        \item Bapak Dr. Ruki Harwahyu S.T., M.T., M.Sc., selaku koordinator
         program ini dari Universitas Indonesia.
 	\item Ian Joseph Chandra, selaku koordinator program ini dari \namaUniv
 	\item \pembimbingUtama, selaku 
@@ -32,14 +20,7 @@ besarnya kepada pihak-pihak terkait, yang terkait yaitu sebagai berikut:
 	\item \pembimbingHarian, selaku mahasiswa program master di \namaLab \ sekaligus sebagai pembimbing harian dari \namaUniv
 \end{enumerate}
 
-Adapun segala kekurangan yang terdapat pada laporan ini harap dimaklumi
-dan dapat disampaikan kepada penulis dalam bentuk kritik dan saran karena penulis
-sadar akan ketidaksempurnaan dalam penulisan laporan ini. Selain itu, penulis juga
-ingin memohon maaf sebesar-besarnya kepada segala pihak yang masih merasakan
-kekurangan baik dari penulis, kegiatan Studi Independen yang diikuti oleh penulis,
-ataupun laporan ini. Harapan penulis kedepannya adalah agar penulis mendapatkan
-kelancaran dalam menjalankan kehidupan perkuliahan setelah program ini, serta
-agar penulis senantiasa berguna bagi agama, keluarga, bangsa, dan negara
+Adapun segala kekurangan \ldots Harapan penulis kedepannya adalah \ldots
 
 \vspace*{1cm}
 \begin{flushright}
