--- a/src/01-body/04-bab4.tex
+++ b/src/01-body/04-bab4.tex
@@ -1,7 +1,7 @@
 %-----------------------------------------------------------------------------%
 \chapter{\babEmpat}
 %-----------------------------------------------------------------------------%
-\todo{tambahkan kata-kata pengantar bab 1 disini}
+\todo{Ubah setiap subbab pada bab ini}
 
 %-----------------------------------------------------------------------------%
 \section{thesis.tex}
